tests/ui/frontmatter/fence-too-many-dashes.rs
----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
//~? ERROR: too many `-` symbols: frontmatter openings may be delimited by up to 255 `-` symbols
// ignore-tidy-linelength
[dependencies]
----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------

#![feature(frontmatter)]

// check that we limit fence lengths

fn main() {}
